# obs-rtsp-source

./: README.md  meson.build  meson_options.txt  rtsp-server.conf
.github/workflows/: test.yaml
src/: main.c  mdns-publish.c  meson.build
src/plugin/: active-notify.c  active-notify.h  mdns-browse.c  mdns-browse.h  meson.build  plugin.c  source.c  source.h
src/sender/: main.c  mdns-publish.c  mdns-publish.h  mdns-publisher.c  mdns-publisher.h  meson.build
